--- a/src/app/pages/welcome/button-menu/button-menu.component.html
+++ b/src/app/pages/welcome/button-menu/button-menu.component.html
@@ -1,10 +1,10 @@
-<mat-card>
+<mat-card routerLink="/informacion">
   <div>
     <h1>Informacion variada de distintas fuentes</h1>
     <button mat-raised-button color="primary" routerLink="/informacion">Documentacion</button>
   </div>
 </mat-card>
-<mat-card>
+<mat-card routerLink="/aeronaves">
   <div>
     <h1>Manuales e informacion de las aeronaves del club</h1>
     <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
