--- a/src/app/pages/welcome/button-menu/button-menu.component.scss
+++ b/src/app/pages/welcome/button-menu/button-menu.component.scss
@@ -1,4 +1,5 @@
 mat-card {
+  opacity: 0.9;
   background: #878e914a;
   display: flex;
   flex-wrap: wrap;
@@ -14,4 +15,9 @@ mat-card {
       margin: 10px;
     }
   }
+}
+
+mat-card:hover {
+  opacity: 1;
+  cursor: pointer;
 }
