--- a/src/app/pages/gliders/info-card/info-card.component.html
+++ b/src/app/pages/gliders/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<mat-card onmouseover="this.style.background='LightGray';" onmouseout="this.style.background='white';" routerLink="/aeronaves/{{ subtitle }}">
+<mat-card onmouseover="this.style.background='#92a793';" onmouseout="this.style.background='#c8e6c9';" routerLink="/aeronaves/{{ subtitle }}">
   <img mat-card-image src="{{ image }}" alt="Card image" onError="this.src='./assets/logo.png'" />
   <mat-card-title>{{ title }}</mat-card-title>
   <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
